# hostpilot

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG_ZH.md  Cargo.toml  README.md  README_ZH.md  TESTING_STSF.md  TESTING_TS.md  TODO.md  TRANSFER.md  rustfmt.toml  优化建议.md  文件传输命令.txt
design_note/: multiuser_service_summary.md
scripts/: run_regressions.ps1
src/: app.rs  auto_concurrency.rs  cli.rs  commands.rs  config.rs  error.rs  lib.rs  main.rs  ops.rs  parse.rs  server.rs  transfer.rs  tui.rs  util.rs
src/transfer/: enumeration.rs  helpers.rs  multi_channel.rs  session.rs  sftp_like.rs
src/transfer/workers/: download.rs  mock_io.rs  mod.rs  pipeline.rs  upload.rs
tests/: auto_concurrency.rs  commands_integration.rs  handle_ts_e2e.rs  output_failures_integration.rs  parse_integration.rs  retry_attempts_integration.rs  retry_integration.rs  retry_sftp_sim.rs  transfer_integration.rs  ts_dir_glob_non_recursive_e2e.rs  ts_dir_slash_equivalence_e2e.rs
