[package]
name = "psm"
version = "0.9.0"
edition = "2024"
license = "MIT"
authors = ["Zachary S <cn.zachary@gmail.com>"]
description = "A cli tool for multi remote SSH server management."
repository = "https://github.com/NitronPlus/psm"

[dependencies]
dirs = "6"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
cli-table = "0.5"
win-toast-notify = "0.1.6"
ratatui = "0.29"
crossterm = "0.29"
chrono = { version = "0.4.42", features = ["serde"] }

[profile.dev]
opt-level = 3
debug = false
strip = true
lto = true
panic = "abort"
