[package]
name = "hostpilot"
version = "0.9.2"
edition = "2024"
license = "MIT"
authors = ["Zachary S <cn.zachary@gmail.com>"]
description = "A cli tool for multi remote SSH server management."
repository = "https://github.com/NitronPlus/hostpilot"

[dependencies]
anyhow = "1.0"
dirs = "6"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
cli-table = "0.5"
ratatui = "0.29"
crossterm = "0.29"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.37", features = ["bundled"] }
which = "8"

ssh2 = "0.9.5"
indicatif = "0.18"
walkdir = "2"
crossbeam-channel = "0.5"

owo-colors = "4"


# minimal tracing deps for --verbose file logging (only used when invoked as `hp ts --verbose`)
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
tracing = "0.1"

[target.'cfg(windows)'.dependencies]
# Windows-only toast notification crate
winrt-notification = "0.5.1"
ssh2 = { version = "0.9.5", features = ["openssl-on-win32"] }
enable-ansi-support = "0.2"

# (added above)

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
debug = false

[[bin]]
name = "hp"
path = "src/main.rs"